[metadata]
name = twinstop
version = attr: mypkg._version.__version__
author = Sergio Sanchez
author_email = sergio.sanchez.moragues@gmail.com
description = twinstop identifies selenoproteins in close related transcriptomes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sergio-Sanchez96/twinstop
project_urls =
https://github.com/Sergio-Sanchez96
    Github Website=https://github.com/Sergio-Sanchez96 

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6, <3.8
install_requires = 
    biopython >= 1.78
    blast >= 2.12.0
    easyterm >= 1.0.0
    easybioinfo >= 0.2.1
    extend_orfs >= 0.0.27
    file-chunk-iterators >= 0.0.1
    pyranges >= 0.0.120
    pandas >= 1.3.5
    multiprocess >= 0.70.14
    numpy >= 1.21.5
    mafft >= 7.505

[options.packages.find]
where = src
